@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.avikdigidev.hms</groupId>
 	<artifactId>Covid-HMS</artifactId>
-	<version>0.0.1</version>
+	<version>1.0</version>
 	<name>Covid-HMS</name>
 	<description>Hospital Management System to handle COVID cases
 	</description>
@@ -69,35 +69,44 @@
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 			</dependency>
-
-			<!-- <dependency> -->
-			<!-- <groupId>org.springframework.boot</groupId> -->
-			<!-- <artifactId>spring-boot-starter-tomcat</artifactId> -->
-			<!-- <scope>provided</scope> -->
-			<!-- </dependency> -->
-	
-
-
-			<!-- <dependency> -->
-			<!-- <groupId>org.springframework.boot</groupId> -->
-			<!-- <artifactId>spring-boot-starter-test</artifactId> -->
-			<!-- <scope>test</scope> -->
-			<!-- <exclusions> -->
-			<!-- <exclusion> -->
-			<!-- <groupId>org.junit.vintage</groupId> -->
-			<!-- <artifactId>junit-vintage-engine</artifactId> -->
-			<!-- </exclusion> -->
-			<!-- </exclusions> -->
-			<!-- </dependency> -->
 		</dependencies>
-
+  <scm>
+    <connection>scm:svn:http://127.0.0.1/dummy</connection>
+    <developerConnection>scm:svn:https://127.0.0.1/dummy</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://127.0.0.1/dummy</url>
+  </scm>
 		<build>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 				</plugin>
-			</plugins>
-		</build>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <id>buildnumber</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <format>{0,number}</format>
+          <items>
+            <item>buildNumber</item>
+          </items>                    
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+          <revisionOnScmFailure>unknownbuild</revisionOnScmFailure>   
+        </configuration>
+      </plugin>    
+    </plugins>
+    <finalName>${project.artifactId}-${project.version}.${buildNumber}</finalName>
+  </build>
 
 </project>
